--- a/pom.xml
+++ b/pom.xml
@@ -84,5 +84,11 @@
             <artifactId>ConfigLib</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.octanepvp.splityosis</groupId>
+            <artifactId>octaneworldsapi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
