Made worlds load synchronously on load so other plugins can access these worlds on startup

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: OctaneWorlds
 version: '${project.version}'
 main: com.octanepvp.splityosis.octaneworlds.OctaneWorlds
 api-version: 1.19
-load: STARTUP
+load: POSTWORLD
